fix gap on tecnology screen

--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -9,6 +9,8 @@ $hero-black: #402c54;
 $button-color: #3626f1;
 $title-color: #495fd2;
 $nav-height: 60px;
+$nav-height-medium: 52px;
+
 $card-about-color: #384171;
 $about-light-color: #3476c4;
 $about-dark-color: #2b4293;
