--- a/src/assets/styles/desktop.css
+++ b/src/assets/styles/desktop.css
@@ -7,7 +7,27 @@ $gap-about: 1rem;
 
 @media screen and (min-width: 768px) {
   .tecnology {
+    padding-top: 3.5em;
+    height: calc(100vh - $nav-height-medium);
     grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: min-content auto min-content min-content min-content auto;
+    margin-bottom: 0;
+  }
+
+  .tecnology__item:nth-of-type(-n + 5) {
+    grid-row: 3;
+  }
+
+  .tecnology__item:nth-of-type(n + 6) {
+    grid-row: 4;
+  }
+
+  .tecnology__item:nth-of-type(n + 11) {
+    grid-row: 5;
+  }
+
+  .title--no-space-bottom-on-desktop {
+    margin-bottom: 0;
   }
 
   .btns {
@@ -40,16 +60,12 @@ $gap-about: 1rem;
     flex-basis: 100%;
   }
 
-  .tecnology {
-    grid-template-columns: repeat(7, 1fr);
-  }
-
-  .tecnology__item:last-child {
-    grid-column: 4 / span 1;
-  }
-
   .photo--move-medium {
     margin-left: 2em;
+  }
+
+  .about {
+    height: calc(100vh - $nav-height-medium);
   }
 
   .about {
@@ -118,5 +134,27 @@ $gap-about: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem;
+  }
+
+  .tecnology {
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: min-content auto min-content min-content min-content auto;
+    padding-top: 3em;
+  }
+
+  .tecnology__item:nth-of-type(-n + 7) {
+    grid-row: 3;
+  }
+
+  .tecnology__item:nth-of-type(n + 8) {
+    grid-row: 4;
+  }
+
+  .tecnology__item:last-of-type {
+    grid-row: 5;
+  }
+
+  .tecnology__item:last-child {
+    grid-column: 4 / span 1;
   }
 }
