--- a/src/assets/styles/mobile.css
+++ b/src/assets/styles/mobile.css
@@ -420,7 +420,6 @@ svg {
   display: grid;
   grid-gap: 1em;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
   justify-content: start;
   margin-bottom: var(--wave-height);
   max-width: 55rem;
